# dromadaire

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  claude  main.py  pyproject.toml  wallet.py
.claude/: settings.json
.github/workflows/: test.yml
kb/docs/: ask_gemini.py
src/dromadaire/: __init__.py  __main__.py  app.py  app.tcss  confiture.py  data.py  spinner.py  state.py  sugar.py  topbar.py  widgets.py
tests/: test_basic.py  test_snapshots.py
tools/: gemini.py  inspiration.json  inspire.py  quack.py
